--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <title>Gerador de Nome de Campanha</title>
 </head>
 <body>
-<label for="data">Data:</label>
+
+    <form id="meuFormulario">
+        <label for="data">Data:</label>
         <input type="date" id="data" name="data">
         <br>
-        <input type="checkbox" id="checkBox1" name="checkBox1">
-        <label for="checkBox1">CheckBox1</label>
+        <input type="checkbox" id="MG" name="opcoes" value="MG">
+        <label for="checkBox1">MG</label>
+        <br>
+        <input type="checkbox" id="DF" name="opcoes" value="DF">
+        <label for="checkBox2">DF</label>
+        <br>
+        <input type="checkbox" id="RJ" name="opcoes" value="RJ">
+        <label for="checkBox3">RJ</label>
         <br>
         <label for="cliente">Cliente:</label>
         <input type="text" id="cliente" name="cliente">
@@ -27,13 +35,18 @@
         function exibirValores() {
             // Captura os valores do formulário
             var data = document.getElementById('data').value;
-            var checkBox1 = document.getElementById('checkBox1').checked;
+            var opcoes = document.getElementsByName('opcoes');
             var cliente = document.getElementById('cliente').value;
             var campanha = document.getElementById('campanha').value;
 
+            // Filtra as opções selecionadas
+            var opcoesSelecionadas = Array.from(opcoes)
+                .filter(opcao => opcao.checked)
+                .map(opcao => opcao.value);
+
             // Constrói a string de resultado
-            var resultado = "DATA(" + data + ")-";
-            resultado += checkBox1 ? "CheckBox1-" : "";
+            var resultado = "(" + data + ")-";
+            resultado += opcoesSelecionadas.join('-') + "-";
             resultado += cliente + "-";
             resultado += campanha;
 
@@ -41,5 +54,6 @@
             document.getElementById('resultados').innerHTML = resultado;
         }
     </script>
+
 </body>
 </html>
