--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         function exibirValores() {
             // Captura os valores do formulário
             var data = document.getElementById('data').value;
-            var opcoes = document.getElementsByName('opcoes').toUpperCase();
+            var opcoes = document.getElementsByName('opcoes');
             var cliente = document.getElementById('cliente').value.toUpperCase();
             var campanha = document.getElementById('campanha').value.toUpperCase();
 
